--- a/lesson_4/01_simple/index.html
+++ b/lesson_4/01_simple/index.html
@@ -12,11 +12,13 @@
     </header>
     <img class="main_pic" src="./img/sunset.jpg" alt="sunset foto" />
     <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio atque
-      molestiae repellat quod nam sequi voluptates accusantium omnis? Molestiae,
-      officiis? Eaque, corporis! Ullam ratione facere ipsam nulla modi
-      dignissimos molestiae nisi culpa quisquam doloremque odit alias esse
-      debitis adipisci saepe placeat sequi natus sed sit, harum vitae officia?
+      Lorem, ipsum dolor sit amet consectetur <i>adipisicing elit</i>.
+      Distinctio atque molestiae repellat quod nam sequi voluptates
+      <b>accusantium omnis? Molestiae, officiis?</b> Eaque, corporis! Ullam
+      ratione facere ipsam nulla modi dignissimos
+      <span class="blue italic"> molestiae </span> nisi culpa quisquam
+      doloremque odit alias esse debitis adipisci saepe placeat sequi natus sed
+      sit, harum vitae officia?
     </p>
     <div class="auto__pic">
       <img class="auto__pic-thumb" src="./img/car01.jpg" alt="yellow auto" />
@@ -30,11 +32,12 @@
       <img class="auto__pic-thumb" src="./img/car05.jpg" alt="red auto" />
     </div>
     <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, maxime
-      quod? Delectus deleniti impedit at ullam incidunt quam iusto debitis,
-      alias, similique, voluptas maiores maxime! Corrupti beatae unde nihil
-      alias.
+      <span class="blue">Lorem ipsum</span> dolor, sit amet consectetur
+      adipisicing elit. Modi, maxime quod? Delectus deleniti impedit at ullam
+      incidunt quam iusto debitis, alias, similique, voluptas maiores maxime!
+      Corrupti beatae unde nihil alias.
     </p>
+    <br />
     <footer>
       <span> С Copyright</span>
     </footer>
