add  file with links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Beetroot academy</h1>
-    <a href="https://yuriy-ciber.github.io/beetroot/">yuriy-ciber</a>
+    <a href="https://yuriy-ciber.github.io/beetroot/">My github</a>
     <ul>
       <li>
         <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_1"
@@ -21,13 +21,25 @@
       </li>
       <li>
         <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_3"
-          >lesson_3</a
+          >lesson_2</a
         >
       </li>
       <li>
-        <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_4"
-          >lesson_4</a
-        >
+        <a href="#">lesson_2</a>
+        <ul>
+          <li>
+            <a
+              href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_4/01_simple"
+              >lesson_4/01_simple</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_4/02_hard"
+              >lesson_4/02_hard</a
+            >
+          </li>
+        </ul>
       </li>
       <li></li>
     </ul>
