--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,14 +18,28 @@
         <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_2"
           >lesson_2</a
         >
+        <ul>
+          <li>
+            <a
+              href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_2/h_work2_form"
+              >h_work2_form</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_2/h_work2_link"
+              >h_work2_link</a
+            >
+          </li>
+        </ul>
       </li>
       <li>
         <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_3"
-          >lesson_2</a
+          >lesson_3</a
         >
       </li>
       <li>
-        <a href="#">lesson_2</a>
+        <a href="#">lesson_4</a>
         <ul>
           <li>
             <a
@@ -46,6 +59,3 @@
     </ul>
   </body>
 </html>
-=======
-
->>>>>>> 4b2e5c2b374c68b274b2f754217470950e44106a
