--- a/index.html
+++ b/index.html
@@ -10,46 +10,39 @@
     <a href="https://yuriy-ciber.github.io/beetroot/">My github</a>
     <ul>
       <li>
-        <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_1"
-          >lesson_1</a
-        >
+        <a href="https://github.com/yuriy-ciber.github.io/lesson_1">lesson_1</a>
       </li>
       <li>
-        <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_2"
-          >lesson_2</a
-        >
+        <a href="https://github.com/yuriy-ciber.github.io/lesson_2">lesson_2</a>
         <ul>
           <li>
             <a
-              href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_2/h_work2_form"
+              href="https://github.com/yuriy-ciber.github.io/lesson_2/h_work2_form"
               >h_work2_form</a
             >
           </li>
           <li>
             <a
-              href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_2/h_work2_link"
+              href="https://github.com/yuriy-ciber/yuriy-ciber.github.io/lesson_2/h_work2_link"
               >h_work2_link</a
             >
           </li>
         </ul>
       </li>
       <li>
-        <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_3"
-          >lesson_3</a
-        >
+        <a href="https://github.com/yuriy-ciber.github.io/lesson_3">lesson_3</a>
       </li>
       <li>
         <a href="#">lesson_4</a>
         <ul>
           <li>
             <a
-              href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_4/01_simple"
+              href="https://github.com/yuriy-ciber.github.io/lesson_4/01_simple"
               >lesson_4/01_simple</a
             >
           </li>
           <li>
-            <a
-              href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_4/02_hard"
+            <a href="https://github.com/yuriy-ciber.github.io/lesson_4/02_hard"
               >lesson_4/02_hard</a
             >
           </li>
