--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
           </li>
         </ul>
       </li>
-      <li></li>
+      <li>
+        <a href="https://github.com/yuriy-ciber.github.ior/lesson_5"
+          >lesson_5</a
+        >
+      </li>
     </ul>
   </body>
 </html>
