--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <a href="https://yuriy-ciber.github.io/beetroot/">My github</a>
     <ul>
       <li>
-        <a href="https://github.com/yuriy-ciber.github.io/lesson_1">lesson_1</a>
+        <a href="https://https://yuriy-ciber.githab.io/beetroot/lesson_1">lesson_1</a>
       </li>
       <li>
-        <a href="https://github.com/yuriy-ciber.github.io/lesson_2">lesson_2</a>
+        <a href="https://https://yuriy-ciber.githab.io/beetroot/lesson_2">lesson_2</a>
         <ul>
           <li>
             <a
@@ -38,20 +38,17 @@
           <li>
             <a
               href="https://github.com/yuriy-ciber.github.io/lesson_4/01_simple"
-              >lesson_4/01_simple</a
-            >
+              >lesson_4/01_simple</a>
           </li>
           <li>
             <a href="https://github.com/yuriy-ciber.github.io/lesson_4/02_hard"
-              >lesson_4/02_hard</a
-            >
+              >lesson_4/02_hard</a>
           </li>
         </ul>
       </li>
       <li>
         <a href="https://github.com/yuriy-ciber.github.ior/lesson_5"
-          >lesson_5</a
-        >
+          >lesson_5</a>
       </li>
     </ul>
   </body>
