--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
     <a href="https://yuriy-ciber.github.io/beetroot/">My github</a>
     <ul>
       <li>
-        <a href="https://https://yuriy-ciber.githab.io/beetroot/lesson_1">lesson_1</a>
+        <a href="https://yuriy-ciber.github.io/beetroot/lesson_1">lesson_1</a>
       </li>
       <li>
-        <a href="https://https://yuriy-ciber.githab.io/beetroot/lesson_2">lesson_2</a>
+        <a href="#">lesson_2</a>
         <ul>
           <li>
             <a
-              href="https://github.com/yuriy-ciber.github.io/lesson_2/h_work2_form"
+              href="https://yuriy-ciber.github.io/beetroot/lesson_2/h_work2_form"
               >h_work2_form</a
             >
           </li>
           <li>
             <a
-              href="https://github.com/yuriy-ciber/yuriy-ciber.github.io/lesson_2/h_work2_link"
+              href="https://yuriy-ciber.github.io/beetroot/lesson_1/lesson_2/h_work2_link"
               >h_work2_link</a
             >
           </li>
         </ul>
       </li>
       <li>
-        <a href="https://github.com/yuriy-ciber.github.io/lesson_3">lesson_3</a>
+        <a href="https://yuriy-ciber.github.io/beetroot/index.html">lesson_3</a>
       </li>
       <li>
         <a href="#">lesson_4</a>
         <ul>
           <li>
             <a
-              href="https://github.com/yuriy-ciber.github.io/lesson_4/01_simple"
+              href="https://yuriy-ciber.github.io/beetroot/lesson_4/01_simple"
               >lesson_4/01_simple</a>
           </li>
           <li>
@@ -47,9 +47,14 @@
         </ul>
       </li>
       <li>
-        <a href="https://github.com/yuriy-ciber.github.ior/lesson_5"
+        <a href="https://yuriy-ciber.github.io/beetroot/lesson_5"
           >lesson_5</a>
       </li>
+        <ul>
+          <li>
+              <a href="https:///yuriy-ciber.github.io/beetroot/lesson_5.1">
+          </li>
+        </ul>
     </ul>
   </body>
 </html>
