--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="https://yuriy-ciber.github.io/beetroot/">My github</a>
     <ul>
       <li>
-        <a href="https://yuriy-ciber.github.io/beetroot/lesson_1">lesson_1</a>
+        <a href="https://yuriy-ciber.github.io/beetroot/lesson_1/index.html">lesson_1</a>
       </li>
       <li>
         <a href="#">lesson_2</a>
