--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <ul>
           <li>
             <a
-              href="https://yuriy-ciber.github.io/beetroot/lesson_2/h_work2_form"
+              href="https://yuriy-ciber.github.io/beetroot/lesson_2/h_work2_form/index.html"
               >h_work2_form</a
             >
           </li>
           <li>
             <a
-              href="https://yuriy-ciber.github.io/beetroot/lesson_1/lesson_2/h_work2_link"
+              href="https://yuriy-ciber.github.io/beetroot/lesson_1/lesson_2/h_work2_link/index.html"
               >h_work2_link</a
             >
           </li>
@@ -37,22 +37,22 @@
         <ul>
           <li>
             <a
-              href="https://yuriy-ciber.github.io/beetroot/lesson_4/01_simple"
+              href="https://yuriy-ciber.github.io/beetroot/lesson_4/01_simple/index.html"
               >lesson_4/01_simple</a>
           </li>
           <li>
-            <a href="https://github.com/yuriy-ciber.github.io/lesson_4/02_hard"
+            <a href="https://github.com/yuriy-ciber.github.io/lesson_4/02_hard/index.html"
               >lesson_4/02_hard</a>
           </li>
         </ul>
       </li>
       <li>
-        <a href="https://yuriy-ciber.github.io/beetroot/lesson_5"
+        <a href="https://yuriy-ciber.github.io/beetroot/lesson_5/index.html"
           >lesson_5</a>
       </li>
         <ul>
           <li>
-              <a href="https:///yuriy-ciber.github.io/beetroot/lesson_5.1">
+              <a href="https:///yuriy-ciber.github.io/beetroot/lesson_5.1/index.html">
           </li>
         </ul>
     </ul>
