--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </li>
           <li>
             <a
-              href="https://yuriy-ciber.github.io/beetroot/lesson_1/lesson_2/h_work2_link/index.html"
+              href="https://yuriy-ciber.github.io/beetroot/lesson_2/h_work2_link/index.html"
               >h_work2_link</a
             >
           </li>
@@ -41,7 +41,7 @@
               >lesson_4/01_simple</a>
           </li>
           <li>
-            <a href="https://github.com/yuriy-ciber.github.io/lesson_4/02_hard/index.html"
+            <a href="https://yuriy-ciber.github.io/lesson_4/02_hard/index.html"
               >lesson_4/02_hard</a>
           </li>
         </ul>
@@ -52,7 +52,7 @@
       </li>
         <ul>
           <li>
-              <a href="https:///yuriy-ciber.github.io/beetroot/lesson_5.1/index.html">
+              <a href="https:///yuriy-ciber.github.io/beetroot/lesson_5.1/index.html">lesson_5.1</a>
           </li>
         </ul>
     </ul>
