--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               >lesson_4/01_simple</a>
           </li>
           <li>
-            <a href="https://yuriy-ciber.github.io/lesson_4/02_hard/index.html"
+            <a href="https://yuriy-ciber.github.io/beetroot/lesson_4/02_hard/index.html"
               >lesson_4/02_hard</a>
           </li>
         </ul>
@@ -53,7 +53,7 @@
       <li
         <ul>
           <li>
-              <a href="https:///yuriy-ciber.github.io/beetroot/lesson_5.1/index.html">lesson_5.1</a>
+              <a href="https://yuriy-ciber.github.io/beetroot/lesson_5.1/index.html">lesson_5.1</a>
           </li>
         </ul>
         </li>
