--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="https://yuriy-ciber.github.io/beetroot/lesson_1/index.html">lesson_1</a>
       </li>
       <li>
-        <a href="#">lesson_2</a>
+        <p>lesson_2</p>
         <ul>
           <li>
             <a
@@ -33,11 +33,10 @@
         <a href="https://yuriy-ciber.github.io/beetroot/index.html">lesson_3</a>
       </li>
       <li>
-        <a href="#">lesson_4</a>
+        <p">lesson_4</p>
         <ul>
           <li>
-            <a
-              href="https://yuriy-ciber.github.io/beetroot/lesson_4/01_simple/index.html"
+            <a href="https://yuriy-ciber.github.io/beetroot/lesson_4/01_simple/index.html"
               >lesson_4/01_simple</a>
           </li>
           <li>
@@ -50,7 +49,7 @@
         <a href="https://yuriy-ciber.github.io/beetroot/lesson_5/index.html"
           >lesson_5</a>
       </li>
-      <li
+      <li>
         <ul>
           <li>
               <a href="https://yuriy-ciber.github.io/beetroot/lesson_5.1/index.html">lesson_5.1</a>
