--- a/lesson_5.1/index.html
+++ b/lesson_5.1/index.html
@@ -44,7 +44,9 @@
       <ul class="footer__list">
         <li class="footer__list-item">
           <div class="footer__image-wrapper">
-            <img class="footer__image" src="images/okay.png" alt="okay" />
+            <a href="./images/okay.png" class="footer__image-link">
+              <img class="footer__image" src="images/okay.png" alt="okay"
+            /></a>
           </div>
           <h3 class="footer__caption">PIEXEL Perfect</h3>
           <p class="footer__text">
