--- a/index.html
+++ b/index.html
@@ -10,52 +10,49 @@
     <a href="https://yuriy-ciber.github.io/beetroot/">My github</a>
     <ul>
       <li>
-        <a href="https://yuriy-ciber.github.io/beetroot/lesson_1/index.html">lesson_1</a>
+        <a href="https://github.com/yuriy-ciber.github.io/lesson_1">lesson_1</a>
       </li>
       <li>
-        <p>lesson_2</p>
+        <a href="https://github.com/yuriy-ciber.github.io/lesson_2">lesson_2</a>
         <ul>
           <li>
             <a
-              href="https://yuriy-ciber.github.io/beetroot/lesson_2/h_work2_form/index.html"
+              href="https://github.com/yuriy-ciber.github.io/lesson_2/h_work2_form"
               >h_work2_form</a
             >
           </li>
           <li>
             <a
-              href="https://yuriy-ciber.github.io/beetroot/lesson_2/h_work2_link/index.html"
+              href="https://github.com/yuriy-ciber/yuriy-ciber.github.io/lesson_2/h_work2_link"
               >h_work2_link</a
             >
           </li>
         </ul>
       </li>
       <li>
-        <a href="https://yuriy-ciber.github.io/beetroot/index.html">lesson_3</a>
+        <a href="https://github.com/yuriy-ciber.github.io/lesson_3">lesson_3</a>
       </li>
       <li>
-        <p">lesson_4</p>
+        <a href="#">lesson_4</a>
         <ul>
           <li>
-            <a href="https://yuriy-ciber.github.io/beetroot/lesson_4/01_simple/index.html"
-              >lesson_4/01_simple</a>
+            <a
+              href="https://github.com/yuriy-ciber.github.io/lesson_4/01_simple"
+              >lesson_4/01_simple</a
+            >
           </li>
           <li>
-            <a href="https://yuriy-ciber.github.io/beetroot/lesson_4/02_hard/index.html"
-              >lesson_4/02_hard</a>
+            <a href="https://github.com/yuriy-ciber.github.io/lesson_4/02_hard"
+              >lesson_4/02_hard</a
+            >
           </li>
         </ul>
       </li>
       <li>
-        <a href="https://yuriy-ciber.github.io/beetroot/lesson_5/index.html"
-          >lesson_5</a>
+        <a href="https://github.com/yuriy-ciber.github.ior/lesson_5"
+          >lesson_5</a
+        >
       </li>
-      <li>
-        <ul>
-          <li>
-              <a href="https://yuriy-ciber.github.io/beetroot/lesson_5.1/index.html">lesson_5.1</a>
-          </li>
-        </ul>
-        </li>
     </ul>
   </body>
 </html>
