--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -7,10 +7,12 @@
     <title>CSS Weather Forecast</title>
   </head>
   <body>
+    <header class="header">
+      <h1>CSS Weather Forecast</h1>
+      <i class="wi wi-sunrise"></i>
+    </header>
     <main class="main">
       <div class="container">
-        <h1>CSS Weather Forecast</h1>
-      <i class="wi wi-sunrise"></i>
         <ul class="container__list">
           <a href="#" class="container__list-link">
             <li class="list_item list_item-block1">
@@ -90,8 +92,11 @@
             </a>
           </li>
         </ul>
-        <p class="container__text">Have a nice day and dont foget umbrella if you are in New Delhi now</p>
+      
       </div>
     </main>
+    <footer class="footer">
+      <p class="footer__text">Have a nice day and dont foget umbrella if you are in New Delhi now</p>
+    </footer>
   </body>
 </html>
