--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -10,7 +10,7 @@
     <a href="https://yuriy-ciber.github.io/beetroot/">yuriy-ciber</a>
     <ul>
       <li>
-        <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_1"
+        <a href="https://github.com/yuriy-ciber/beetroot/tree/master/lesson_1/index.html"
           >lesson_1</a
         >
       </li>
