--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -3,9 +3,89 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Who we are</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <header class="header">
+      <h1 class="title">Who we are</h1>
+      <hr class="hr" />
+      <span class="subtitle"
+        >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.</span
+      >
+    </header>
+    <section class="section">
+      <ul class="section__list list">
+        <li class="list__item card">
+          <img src="./image/Alex.png" alt="Alex" class="card__image" />
+
+          <div class="wrapper-thumb">
+            <img
+              src="./image/Twitter.png"
+              alt="Twitter"
+              class="card__social-thumb"
+            />
+          </div>
+          <div class="wrapper-thumb">
+            <img src="./image/FB.png" alt="FB" class="card__social-thumb" />
+          </div>
+          <div class="wrapper-thumb">
+            <img src="./image/G+.png" alt="Google" class="card__social-thumb" />
+          </div>
+        </li>
+
+        <li class="list__item card">
+          <img src="./image/Alex.png" alt="Alex" class="card__image" />
+          <div class="wrapper-thumb">
+            <img
+              src="./image/Twitter.png"
+              alt="Twitter"
+              class="card__social-thumb"
+            />
+          </div>
+          <div class="wrapper-thumb">
+            <img src="./image/FB.png" alt="FB" class="card__social-thumb" />
+          </div>
+          <div class="wrapper-thumb">
+            <img src="./image/G+.png" alt="Google" class="card__social-thumb" />
+          </div>
+        </li>
+
+        <li class="list__item card">
+          <img src="./image/Elena.png" alt="Elena" class="card__image" />
+          <div class="wrapper-thumb">
+            <img
+              src="./image/Twitter.png"
+              alt="Twitter"
+              class="card__social-thumb"
+            />
+          </div>
+          <div class="wrapper-thumb">
+            <img src="./image/FB.png" alt="FB" class="card__social-thumb" />
+          </div>
+          <div class="wrapper-thumb">
+            <img src="./image/G+.png" alt="Google" class="card__social-thumb" />
+          </div>
+        </li>
+
+        <li class="list__item card">
+          <img src="./image/Lily.png" alt="Lily" class="card__image" />
+          <div class="wrapper-thumb">
+            <img
+              src="./image/Twitter.png"
+              alt="Twitter"
+              class="card__social-thumb"
+            />
+          </div>
+          <div class="wrapper-thumb">
+            <img src="./image/FB.png" alt="FB" class="card__social-thumb" />
+          </div>
+          <div class="wrapper-thumb">
+            <img src="./image/G+.png" alt="Google" class="card__social-thumb" />
+          </div>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
