update css and index

--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -87,5 +87,33 @@
         </li>
       </ul>
     </section>
+    <footer class="footer">
+      <ul class="footer__list">
+        <li class="list__item-persons">
+          <div class="person">
+            <span class="name">John Handson </span
+            ><span class="position">Lead Designer</span>
+          </div>
+        </li>
+        <li class="list__item-persons">
+          <div class="person">
+            <span class="name">Alex Cutter </span
+            ><span class="position">Developer</span>
+          </div>
+        </li>
+        <li class="list__item-persons">
+          <div class="person">
+            <span class="name">Elena Simpson </span
+            ><span class="position">Artist</span>
+          </div>
+        </li>
+        <li class="list__item-persons">
+          <div class="person">
+            <span class="name">Lily Allen </span
+            ><span class="position">Graphic Designer</span>
+          </div>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
