--- a/lesson_10_2/src/index.html
+++ b/lesson_10_2/src/index.html
@@ -15,45 +15,48 @@
         dolor in reprehenderit in voluptate velit.
       </p>
       <ul class="section__list">
-        <li class="list__list card">
-          <img src="./images/smoothies.png" alt="smoothies" class="card__img" />
+        <li class="section__list-item card">
+          <img class="card__image" src="images/smoothies.png" alt="smoothies" />
           <div class="card__date-box">
-            <span class="card__date">10 nov</span>
+            <span class="card__date">20</span>
+            <span class="card__month">NOV</span>
           </div>
           <div class="card__content">
             <h3 class="card__title">
               Green Smoothies: Too Much of a Good Thing?
             </h3>
-            <p class="card__text">By Auskteez - 2 hours ago</p>
+            <p class="card__info">By Auskteez - 2 hours ago</p>
           </div>
         </li>
-        <li class="list__list card">
-          <img src="./images/food.png" alt="food" class="card__img" />
+        <li class="section__list-item card">
+          <img class="card__image" src="images/food.png" alt="food" />
           <div class="card__date-box">
-            <span class="card__date">10 nov</span>
+            <span class="card__date">14</span>
+            <span class="card__month">NOV</span>
           </div>
           <div class="card__content">
             <h3 class="card__title">
-              Growing Food and a “Thirst” for Innovation
+              Green Smoothies: Too Much of a Good Thing?
             </h3>
-            <p class="card__text">By Auskteez - 3 hours ago</p>
+            <p class="card__info">By Auskteez - 2 hours ago</p>
           </div>
         </li>
-        <li class="list__list card">
-          <img src="./images/strogbery.png" alt="strobery" class="card__img" />
-          <div class="card__date-box">
-            <span class="card__date">10 nov</span>
-          </div>
 
+        <li class="section__list-item card">
+          <img class="card__image" src="images/strogbery.png" alt="strobery" />
+          <div class="card__date-box">
+            <span class="card__date">10</span>
+            <span class="card__month">NOV</span>
+          </div>
           <div class="card__content">
             <h3 class="card__title">
-              Pesticides & Food: What You Need to Know
+              Green Smoothies: Too Much of a Good Thing?
             </h3>
-            <p class="card__text">By Auskteez - 6 hours ago</p>
+            <p class="card__info">By Auskteez - 2 hours ago</p>
           </div>
         </li>
       </ul>
-      <button class="button">VIEW MORE</button>
+      <button class="button">View More</button>
     </section>
   </body>
 </html>
