--- a/lesson_11/src/index.html
+++ b/lesson_11/src/index.html
@@ -16,22 +16,15 @@
       <!-- Services start -->
       //= templates/services.html
       <!-- Services end -->
+      <!-- gallery start -->
+      //= templates/gallery.html
+      <!-- gallery end -->
       <!-- Contact start -->
       //= templates/contact.html
       <!-- Contact end -->
     </main>
     <!-- Footer start -->
-    <footer class="footer">
-      <span class="footer__copyright">© 2015 Company. All right reserved.</span>
-      <div class=" logo footer__logo">
-        <a href="#" class="footer__logo-link">
-          <img src="./images/logo.png" class="footer__logo-pic" alt="Cahee" />
-        </a>
-      </div>
-      <span class="footer__autor">
-        Made with<span class=" footer__autor footer __autor--red">love</span> by
-        Auskteez
-      </span>
-    </footer>
+    //= templates/footer.html
+    <!-- Footer end -->
   </body>
 </html>
