--- a/Экзамен/src/index.html
+++ b/Экзамен/src/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css"/>
+    <title>Bhromaon</title>
   </head>
   <body>
     //= templates/header.html
+    //= templates/why.html
+    //= templates/search.html
+    //= templates/apartament.html
+    //= templates/mountan.html
+    //= templates/what-say.html
+    //= templates/footer.html
   </body>
 </html>
